[package]
name = "twitch_oauth2_auth_flow"
version = "0.0.1-alpha"
authors = ["stuckoverflow2021"]
edition = "2018"

[dependencies]
futures = "0.3"
log = "0.4"
tiny_http = "0.6"
twitch_oauth2 = { features = ["surf_client"], version = "0.5.0-beta.1"  }
surf = "2.2.0"
url = "2.2"
thiserror = "1"

[dev-dependencies]
surf = "2.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
dotenv = "0.15.0"
