[package]
name = "twitch_oauth2_auth_flow"
version = "0.0.1-alpha"
authors = [ "stuck-overflow", "satu", "ed-fish" ]
categories = [ "authentication" ]
edition = "2018"
keywords = [ "oauth", "twitch", "auth" ]
license = "MIT"
repository = "https://github.com/stuck-overflow/twitch_oauth2_auth_flow"
resolver = "2"
readme = "README.md"

[dependencies]
futures = "0.3"
log = "0.4"
reqwest = { version = "0.11", optional = true }
surf = { version = "2", optional = true }
thiserror = "1"
tiny_http = "0.8"
twitch_oauth2 = { version = "0.5.1" }
url = "2.2"

[features]
default = [ "surf_client" ]

surf_client = [ "surf", "twitch_oauth2/surf_client" ]
reqwest_client = [ "reqwest", "twitch_oauth2/reqwest_client" ]

[dev-dependencies]
dotenv = "0.15.0"
surf = "2.2"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "test-util" ] }
twitch_oauth2 = { features = [ "surf_client" ], version = "0.5.1" }
